--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,7 +72,10 @@ dependencies {
     //retrofit
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation 'com.squareup.moshi:moshi-kotlin:1.13.0'
+    kapt "com.squareup.moshi:moshi-kotlin-codegen:1.13.0"
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+
+    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
 
     //cargar imagen
     implementation("io.coil-kt:coil-compose:2.1.0")
